onkelskrue/doffen/doffen-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: doffen-svc
  labels:
    app: doffen
spec:
  ports:
  - port: 5003
    targetPort: 5003
    protocol: TCP
    name: http
  selector:
    app: doffen
